首页增加三个小板块、其它一些小调整

--- a/case-detail.html
+++ b/case-detail.html
@@ -35,7 +35,7 @@
             <div class="border border-gray radius margin-top padding">
                 <div class="main"></div>
             </div>
-            <div class="relevant"></div>
+            <div class="relevant padding-top"></div>
         </div>
         <div class="sidebar float-right">
             <div class="class"></div>
