--- a/index.html
+++ b/index.html
@@ -37,58 +37,184 @@
             <div class="info"></div>
         </div>
         <div class="clear"></div>
+        <div id="about-board">
+            <div class="head"></div>
+            <div class="content"></div>
+        </div>
         <div id="custom-board">
             <div class="head"></div>
             <div class="content"></div>
         </div>
-        <div id="about-board">
-            <div class="head"></div>
-            <div class="content">
-                <h3>广州杰美服装有限公司</h3>
-                <p>
-                    广州杰美服装有限公司是一家集设计、面料开发，生产、销售、CT策划为一体的专业制服公司，于2004年在广州市番禺建厂，其厂房规模面积达10000平方米，厂内员工有600多人，（其中部分职员办公司地点在广州白云区）是广东制服生产龙头企业。
-                    杰美公司生产基地凭借从德国（凤眼机、珠边机）、日本（开袋机、挑襟机，验布机，粘衬机）、意大利（缩水机，高温人体西装定型机）引进的最先进的生产设备，以及雄厚的生产实力和完善的管理体系，为国内各行各业制服生产，提供了尽善尽美的专业服务。
-                    杰美服装有限公司是从事金融业，房地产，保险业，工矿企业，物业公司等设计开发，生产制作，销售为一体的专业制服公司，同时还致力于国家环保，航空，铁路，海关，行政机关，学校制服的研制开发。
-                    我们把各大企业的CI，VI系统导入制服的设计中，根据各个合作伙伴的不同定位，为每一个合作伙伴供量身定做的服务，从而确保每一个客户可以身着具有本企业...<a class="more"
-                                                                                                   href="#">[查看详情]</a>
-                </p>
-            </div>
-        </div>
+        <div class="board-columns clearfix"></div>
     </div>
 </div>
 <footer id="footer"></footer>
 <script src="js/vendor/jquery-1.12.0.min.js"></script>
 <script src="js/vendor/laytpl.js"></script>
+<script src="js/vendor/jquery.marquee.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/vendor/pintuer.js"></script>
 <script>
     $(function () {
         //正文
-        mCom.headBarComponent.data = {
-            title: "新品推荐",
-            subtitle: "NEW PRODUCTS",
-            url: ""
-        };
-        mCom.headBarComponent.init('#main > .container > .content');
-        mCom.simpleProdListComponent.init('#main > .container > .content');
+        mCom.boardComponent.init('#main > .container > .content', {
+            head: {
+                title: "新品推荐",
+                subtitle: "NEW PRODUCTS",
+                url: ""
+            },
+            content: mCom.simpleProdListComponent.getHtml()
+        });
 
         //客户案例
-        mCom.headBarComponent.data = {
-            title: "客户案例",
-            subtitle: "CUSTOMER CASE",
-            url: ""
-        };
-        mCom.headBarComponent.init('#custom-board > .head');
-        mCom.customListComponent.init('#custom-board > .content');
+        mCom.boardComponent.init('#custom-board', {
+            head: {
+                title: "客户案例",
+                subtitle: "CUSTOMER CASE",
+                url: ""
+            },
+            content: mCom.customListComponent.getHtml()
+        });
 
         //关于我们
-        mCom.headBarComponent.data = {
-            title: "关于我们",
-            subtitle: "ABOUT PATON GROUP",
-            url: ""
-        };
-        mCom.headBarComponent.init('#about-board > .head');
+        mCom.boardComponent.init('#about-board', {
+            head: {
+                title: "关于我们",
+                subtitle: "ABOUT PATON GROUP",
+                url: ""
+            },
+            content: '<h3>广州杰美服装有限公司</h3>' +
+            '<p>广州杰美服装有限公司是一家集设计、面料开发，生产、销售、CT策划为一体的专业制服公司，于2004年在广州市番禺建厂，其厂房规模面积达10000平方米，厂内员工有600多人，（其中部分职员办公司地点在广州白云区）是广东制服生产龙头企业。' +
+            '杰美公司生产基地凭借从德国（凤眼机、珠边机）、日本（开袋机、挑襟机，验布机，粘衬机）、意大利（缩水机，高温人体西装定型机）引进的最先进的生产设备，以及雄厚的生产实力和完善的管理体系，为国内各行各业制服生产，提供了尽善尽美的专业服务。' +
+            '杰美服装有限公司是从事金融业，房地产，保险业，工矿企业，物业公司等设计开发，生产制作，销售为一体的专业制服公司，同时还致力于国家环保，航空，铁路，海关，行政机关，学校制服的研制开发。' +
+            '我们把各大企业的CI，VI系统导入制服的设计中，根据各个合作伙伴的不同定位，为每一个合作伙伴供量身定做的服务，从而确保每一个客户可以身着具有本企业...<a class="more"' +
+            'href="#">[查看详情]</a></p>'
+        });
+
+        //公司动态
+        mCom.boardComponent.init('.board-columns', {
+            head: {
+                title: "公司动态",
+                subtitle: "COMPANY DYNAMIC",
+                url: "news.html"
+            },
+            content: mCom.newsBoardContentComponent.getHtml([
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                }
+            ])
+        });
+
+        //行业动态
+        mCom.boardComponent.init('.board-columns', {
+            head: {
+                title: "行业动态",
+                subtitle: "INDUSTRY DYNAMIC",
+                url: "news.html"
+            },
+            content: mCom.newsBoardContentComponent.getHtml([
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                },
+                {
+                    img: "img/news_01.jpg",
+                    title: "波司登董事长高德康参与两会:培养工匠型的一线工人",
+                    time: "2017-03-06",
+                    content: "“中国制造业的转型升级，离不开一大批工匠型的一线产业工人。”十二届全国人大代表、波司登集团董事长在接受记者采访时说。",
+                    id: "1"
+                }
+            ])
+        });
+
+        //常见问题
+        mCom.boardComponent.init('.board-columns', {
+            head: {
+                title: "常见问题",
+                subtitle: "INDUSTRY DYNAMIC",
+                url: "qna.html"
+            },
+            content: mCom.fqaBoardComponent.getHtml([
+                {
+                    question: "贵公司的加工方式有几种？",
+                    answer: "贵公司的加工方式有几种？我公司的加工方式有4种，原创设计、客户来样、来图（提供细节图、尺寸、面料），选版加工。"
+                },
+                {
+                    question: "贵公司的加工方式有几种？",
+                    answer: "贵公司的加工方式有几种？我公司的加工方式有4种，原创设计、客户来样、来图（提供细节图、尺寸、面料），选版加工。"
+                },
+                {
+                    question: "贵公司的加工方式有几种？",
+                    answer: "贵公司的加工方式有几种？我公司的加工方式有4种，原创设计、客户来样、来图（提供细节图、尺寸、面料），选版加工。"
+                }
+            ])
+        });
+        $('.fqa-board-con').marquee({
+            duration: 10000,
+            gap: 0,
+            delayBeforeStart: 0,
+            direction: 'up',
+            duplicated: true,
+            pauseOnHover: true,
+            startVisible: true
+        });
 
         //侧边栏
         mCom.sidebarClassComponent.init('#main > .container > .sidebar > .class');
