--- a/prod-detail.html
+++ b/prod-detail.html
@@ -37,7 +37,16 @@
                 <div id="prod-detail">
                     <div class="padding">
                         <div class="head border-bottom border-main padding-top-bottom text-big">产品详情</div>
-                        <div class="content">这里是产品详情内容</div>
+                        <div class="content">
+                            <img class="img-fluid" src="img/prod_detail_01.png">
+                            <img class="img-fluid" src="img/prod_detail_02.png">
+                            <img class="img-fluid" src="img/prod_detail_03.png">
+                            <img class="img-fluid" src="img/prod_detail_04.png">
+                            <img class="img-fluid" src="img/prod_detail_05.png">
+                            <img class="img-fluid" src="img/prod_detail_06.png">
+                            <img class="img-fluid" src="img/prod_detail_07.png">
+                            <img class="img-fluid" src="img/prod_detail_08.png">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -81,7 +90,9 @@
     <img class="cover x5" src="img/prod_01.jpg">
     <div class="info x7 padding-left">
         <h3 class="title padding-big-bottom padding-top border-bottom border-main">{{d.title}}</h3>
-        <div class="content padding-top-bottom-big">{{d.content}}</div>
+        <div class="content padding-top-bottom-big">
+            {{d.content}}
+        </div>
         <div>
             <button class="button bg-dot padding-left-right-large">详细咨询</button>
             <span class="padding-big-left">订购热线：<span class="text-dot">{{d.tel}}</span></span>
@@ -114,7 +125,20 @@
         laytpl($('#prod-base-info-tpl').html()).render({
             title: "商务西装正装套装(BDSEM024)",
             img: "img/prod_01.jpg",
-            content: "这里是产品描述",
+            content: '<div><span class="x2 padding-big-right">货源类别</span>定做</div>' +
+            '<div><span class="x2 padding-big-right">品牌</span>杰美</div>' +
+            '<div><span class="x2 padding-big-right">适用场合</span>保安服/礼宾服</div>' +
+            '<div><span class="x2 padding-big-right">适用性别</span>男</div>' +
+            '<div><span class="x2 padding-big-right">产品类别</span>套装</div>' +
+            '<div><span class="x2 padding-big-right">功能</span>保暖，舒适透气</div>' +
+            '<div><span class="x2 padding-big-right">误差范围</span>2-3cm</div>' +
+            '<div><span class="x2 padding-big-right">适合季节</span>春季/秋季</div>' +
+            '<div><span class="x2 padding-big-right">是否外贸</span>是</div>' +
+            '<div><span class="x2 padding-big-right">面料名称</span>高支混纺</div>' +
+            '<div><span class="x2 padding-big-right">主面料成分</span>80&涤，20%粘胶</div>' +
+            '<div><span class="x2 padding-big-right">里面料成分</span>100%涤纶</div>' +
+            '<div><span class="x2 padding-big-right">颜色</span>各种颜色可定制</div>' +
+            '<div><span class="x2 padding-big-right">尺码</span>165（M）,170（L）,175（XL）,185（XXXL）,180(XXL),190(XXXXLß)</div>',
             tel: "020-66359500"
         }, function (html) {
             $('#prod-base-info').html(html);
