--- a/tpl.html
+++ b/tpl.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 <div id="wrapper">
+    <script type="text/html" id="footer-tpl">
+        <div class="border-top border-main margin-top text-center padding-top-bottom-big">
+            <div class="padding-little">地址：北京市丰台区青塔西路15号习鼎阁大厦4层</div>
+            <div class="padding-little">广州市越秀区越华路珠江国际大厦3905</div>
+            <div class="padding-little">热线电话:010-57152205</div>
+            <div class="padding-little">粤ICP备15059219号-1</div>
+        </div>
+    </script>
 </div>
 </body>
 </html>
